kubernetes/apps/kafka/kafka/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoohoot-kafka-0
spec:
  hostnames: ["kafka-0.${LIMITED_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hoohoot-kafka-0
          namespace: kafka
          port: 9094
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoohoot-kafka-1
spec:
  hostnames: ["kafka-1.${LIMITED_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hoohoot-kafka-1
          namespace: kafka
          port: 9094
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoohoot-kafka-2
spec:
  hostnames: ["kafka-2.${LIMITED_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hoohoot-kafka-2
          namespace: kafka
          port: 9094
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hoohoot-kafka-bootstrap
spec:
  hostnames: ["kafka-bootstrap.${LIMITED_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hoohoot-kafka-external-bootstrap
          namespace: kafka
          port: 9094
